--- a/easycameralibs/src/main/res/layout/easycam_widget_cam_container.xml
+++ b/easycameralibs/src/main/res/layout/easycam_widget_cam_container.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.march.libs.mycamera.CameraSurfaceView
+    <com.march.easycameralibs.widgets.CameraSurfaceView
         android:id="@+id/widget_cam_container_surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
