--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,14 @@
         app:easycam_isShowTop="true"
         />
 
+    <Button
+        android:textSize="19sp"
+        android:textColor="#0f0"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:background="@drawable/shape_round"
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="时候 时候 时候 时候 时候 时候 "/>
 </RelativeLayout>
