--- a/easycameralibs/src/main/res/layout/easycam_widget_cam_container.xml
+++ b/easycameralibs/src/main/res/layout/easycam_widget_cam_container.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,7 +7,14 @@
     <com.march.easycameralibs.widgets.CameraSurfaceView
         android:id="@+id/widget_cam_container_surface"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
+    <View
+        android:id="@+id/widget_cam_container_splash"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="#99000000" />
 
     <View
         android:id="@+id/widget_cam_container_focus"
@@ -16,19 +22,19 @@
         android:layout_height="80dp"
         android:layout_margin="50dp"
         android:background="@drawable/shape_focus"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/widget_cam_container_bottombar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/black"/>
+        android:background="@color/black" />
 
     <RelativeLayout
         android:id="@+id/widget_cam_container_topbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
-        android:background="@color/black"/>
+        android:background="@color/black" />
 </RelativeLayout>
